# aws-lambda-crawler

./: .gitignore  README.md  handler.py  pyproject.toml  samconfig.toml  template.yaml
crawler/: fetcher.py  secrets.py
webapp/: README.md  __init__.py  app.py  pyproject.toml
webapp/templates/: index.html
